tests/e2e/snapshots/machine_contract__machine_contract_describe.snap
---
source: tests/machine_contract.rs
assertion_line: 389
expression: normalize_for_snapshot(output)
---
{
  "command": "view.describe",
  "meta": {
    "query_time_ms": 0,
    "vault_path": "./tests/test-vault"
  },
  "params": {
    "filename": "Home"
  },
  "result": {
    "status": "success"
  },
  "timestamp": "TIMESTAMP",
  "version": "1.0"
}
