tests/e2e/snapshots/machine_contract__machine_contract_tags.snap
---
source: tests/machine_contract.rs
assertion_line: 236
expression: normalize_for_snapshot(output)
---
{
  "command": "query.tags",
  "meta": {
    "query_time_ms": 0,
    "vault_path": "./tests/test-vault"
  },
  "params": {
    "list": false,
    "tag": null
  },
  "result": {
    "status": "success"
  },
  "timestamp": "TIMESTAMP",
  "version": "1.0"
}
