tests/e2e/snapshots/machine_contract__machine_contract_unresolved.snap
---
source: tests/machine_contract.rs
assertion_line: 213
expression: normalize_for_snapshot(output)
---
{
  "command": "query.unresolved",
  "meta": {
    "query_time_ms": 0,
    "vault_path": "./tests/test-vault"
  },
  "params": {},
  "result": {
    "status": "success"
  },
  "timestamp": "TIMESTAMP",
  "version": "1.0"
}
